--- a/src/components/PatientDetails.css
+++ b/src/components/PatientDetails.css
@@ -191,3 +191,22 @@
     background-color: white;
     color: #5a5a9a;
   }
+  
+  .medicine-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .delete-medicine-button {
+    background-color: red;
+    color: #fff;
+    border: none;
+    border-radius: 50%;
+    font-weight: bold;
+    cursor: pointer;
+    padding: 0 6px;
+    line-height: 1;
+    font-size: 12px;
+  }
+  
