--- a/src/components/HelpLog.css
+++ b/src/components/HelpLog.css
@@ -7,7 +7,7 @@
     justify-content: center;
     padding: 20px;
     border-radius: 5px;
-    max-width: 600px;
+    width: 1000px;
     margin: 0 auto;
   }
   
